  Fixed de_de.json language files. Fixed "Lasers" and "Auto Shutoff" not being translated.
    See: https://github.com/ADDSynth/Overpowered-Forge-1.14/commit/5f4418eadb862447e4b58be2b637d0f230d717f4
  Fixed Energy Suspension Bridge maximum length was actually 1 less than what is set
    in the configuration.
  Fix not loading MachineValues config correctly. Yay! Sorry about that!
REMOVED:
  Before now, you could still edit the config to seperate Tools into their own Creative Tab,
    we've finally removed that.
KNOWN PROBLEMS:
  If you edit the configuration option that changes the Maximum Energy Suspension Bridge
    Length to a lower value, while you have a bridge active in your world, then the
    Energy Suspension Bridge will not recognize it, and won't be able to turn it off.
    The energy bridge will exist as actual indestructable blocks in the world, not controlled
    by the Energy Suspsension Bridge.
    - I will try to fix this as soon as I can!
  Passive Machines (Crystal Matter Generator and Plasma Generator) will continue consuming energy
    even though the output slot is full and can't insert any more items.
DEVELOPER ONLY:
  Magic Infuser recipes are now defined by .json recipe files in a DataPack. You can define
  your own recipes, as long as they are formatted properly.



v1.4.2 - June 15, 2022
NEW:
  Added an alternate crafting recipe for the Inverter.
  Added Project E EMC values to Silicon and the Circuit items.
  The drawn ItemStacks in the Portal Control Panel gui now cycle between all
    valid Gem Blocks that can be accepted in the Portal Frames, and also show
    an Item tooltip if you mouse over them, just like the drawn ItemStacks in
    the Circuit Fabricator gui.
  Added Issue Tracker to the mods.toml file.
CHANGED:
  The Fusion Core is now crafted with Blaze Powder instead of Fire Charges.
  Power Cycle time (Portal Control Panel & Crystal Matter Generator) is now