@@ -1,6 +1,7 @@
 package addsynth.core.util.game.data;
 
 import java.util.Set;
+import addsynth.core.ADDSynthCore;
 import addsynth.core.util.player.PlayerUtil;
 import net.minecraft.advancements.Advancement;
 import net.minecraft.advancements.AdvancementManager;
@@ -14,21 +15,25 @@ public final class AdvancementUtil {
   /** This grants the player the criteria you specify.
    * @param player
    * @param advancement_id the ResourceLocation of the advancement (location of the file)
-   * @param criteria_id Is the criteria id label in the advancement.json file
+   * @param criteria_id Is the criteria ID label in the advancement.json file
    */
-  @Deprecated
   public static final void grantAdvancement(ServerPlayerEntity player, ResourceLocation advancement_id, String criteria_id){
     @SuppressWarnings("resource")
     final MinecraftServer server = player.getServer();
     if(server != null){
       final AdvancementManager manager = server.getAdvancementManager();
       final Advancement advancement = manager.getAdvancement(advancement_id);
-      player.getAdvancements().grantCriterion(advancement, criteria_id);
+      if(advancement != null){
+        player.getAdvancements().grantCriterion(advancement, criteria_id);
+      }
+      else{
+        ADDSynthCore.log.error(new NullPointerException("Advancement "+advancement_id.toString()+" doesn't exist."));
+      }
     }
   }
 
 
-  /** This grants the advancement using the first criteria of the advancement.
+  /** This grants the advancement using all of the criteria in the advancement.
    * @param player_name
    * @param world
    * @param advancement
@@ -40,7 +45,7 @@ public final class AdvancementUtil {
     }
   }
 
-  /** This grants the advancement using the first criteria of the advancement.
+  /** This grants the advancement using all of the criteria in the advancement.
    * @param player
    * @param advancement_id the ResourceLocation of the advancement (location of the file)
    */
@@ -52,10 +57,12 @@ public final class AdvancementUtil {
       final Advancement advancement = manager.getAdvancement(advancement_id);
       if(advancement != null){
         final Set<String> criteria_set = advancement.getCriteria().keySet();
-        if(criteria_set.size() > 0){
-          final String criteria = criteria_set.toArray(new String[criteria_set.size()])[0];
+        for(String criteria : criteria_set){
           player.getAdvancements().grantCriterion(advancement, criteria);
         }
+      }
+      else{
+        ADDSynthCore.log.error(new NullPointerException("Advancement "+advancement_id.toString()+" doesn't exist."));
       }
     }
   }
